--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "keywords": [
     "test"
   ],
-  "author": "Aira Astilla",
+  "author": "Bowjie",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Bowjie/expressjs-basecode/issues"
